@@ -28,6 +28,29 @@ MorhpOS: can be compiled using the provided patch.
 
 
 
+Quick Compilation for Debian Based Systems
+------------------------------------------
+
+In case you don't want to read all this file and you use a Debian based system (Debian, Ubuntu, etc), just run the following:
+
+apt-get -y install git gcc make libncurses-dev libssl-dev xorg-dev libpulse-dev libsndfile1-dev
+
+export CFLAGS="-O3"
+export LDFLAGS="-O3"
+
+./configure --enable-memptr --enable-visualmem --enable-cpustats --enable-ssl --disable-caca --disable-aa --disable-cursesw --prefix /usr && make -j2
+
+
+You can run it by just executing: ./zesarux
+
+If you want to install it:
+su root
+make install
+
+And it will be located in your path and can be called by just running: zesarux
+
+
+
 Core Requirements
 -----------------
 
@@ -82,13 +105,13 @@ The following is a list of complete features, all of which are optional.
 
 # Video Drivers
 
-- x11 (on GNU/Linux, other Unix and Raspberry): needs x11libs, x11extlibs, xf86vidmode, xxf86vm. Probably with the command "apt-get install xorg-dev" will be enough
+- x11 (on GNU/Linux, other Unix and Raspberry): needs x11libs, x11extlibs, xf86vidmode, xxf86vm. On debian-based systems the command "apt-get install xorg-dev" will be enough
 - x11 (on Mac OS X): needs XQuartz
 - cocoa (on Mac OS X): Compiling supported using XCode.
-- SDL 1.2 (on GNU/Linux, other Unix and Raspberry): needs sdllib-1.2. SDL2 is experimental
+- SDL 1.2 (on GNU/Linux, other Unix and Raspberry): needs sdllib-1.2. SDL2 is experimental. Run "apt-get install libsdl1.2-dev" on debian-based systems
 - caca: cacalib
 - aa: aalib
-- curses: curses-dev. You can also install cursesw to have 64x48 text resolution
+- curses: curses-dev. You can also install cursesw to have 64x48 text resolution. Run "apt-get install libncurses-dev" on debian-based systems
 - stdout: termios includes
 
 
@@ -96,21 +119,21 @@ The following is a list of complete features, all of which are optional.
 
 - OSS (dsp) (on GNU/Linux, other Unix and Raspberry): needs soundcard includes. Usually included on GNU/Linux systems.
 - alsa (on GNU/Linux, other Unix and Raspberry): needs alsalibs. Also needed if you want midi output
-- pulse (on GNU/Linux, other Unix and Raspberry): needs pulselibs.
+- pulse (on GNU/Linux, other Unix and Raspberry): needs pulselibs. Run "apt-get install libpulse-dev" on debian-based systems
 - SDL 1.2 (on GNU/Linux, other Unix and Raspberry): needs sdllib. SDL2 is experimental.
 - coreaudio (on Mac OS X): Compiling supported using XCode.
 
 
 # Audio Output to a File
 
-- libsndfile to output audio to wav files.
+- libsndfile to output audio to wav files. Run "apt-get install libsndfile1-devv" on debian-based systems
 - Raw audio is always supported.
 
 
 # Other Enhancements
 
 - pthreads: pthread includes. Usually included on all Unix systems.
-- ssl library: to have the speccy online browser. Add "--enable-ssl" setting to the configure script.
+- ssl library: to have the speccy online browser. Add "--enable-ssl" setting to the configure script. Run "apt-get install libssl-dev" on debian-based systems
 ssl library is not included on Mac anymore; you can easily install it using https://brew.sh, after that, do a "brew install openssl"
 
 
