@@ -1,0 +1,9 @@
+-map ram0 on top c000
+-copy rom space (0-16383) to c000
+-set mmu low segment (reg 80) to 0. set mmu low segment (reg 81) to 1. this maps first two pages of 8kb ram on rom space
+
+
+10 clear 49151
+20 out 32765,16
+30 for n=23296 to 23551: read a: poke n,a: print n,a: next n
+40 data 33,0,0,17,0,192,1,0,64,237,176,201
