@@ -8,6 +8,7 @@ Added flash support on screen previews
 Added ZX Desktop icons for TSConf, Baseconf
 Added show current AY Player song playing on console <-- TODO fix this description
 Added PCW colour modes
+Added compiled version for Ubuntu
 
 * As always, there are some other minor bugfixes and improvements
 
